grammar/grammar.js
    source_file: ($) =>
      seq(
        repeat($._newline),
        optional(newlineSep1($._element, $)),
      ),

    _element: ($) =>
      choice(
        $.project_definition,
        $.table_definition,
        $.table_partial_definition,
        $.enum_definition,
        $.ref_definition,
        $.table_group_definition,
        $.sticky_note_definition,
        $.records_definition,
        $.diagram_view_definition,
        $.import_statement,
        // Volt layer (docs/spec.md §V)
        $.package_clause,
        $.import_block,
        $.pipeline_definition,
        $.scope_definition,
        $.group_definition,
        $.pred_definition,
        $.select_definition,
      ),

    // ==================== Project (§6.1) ====================

    table_definition: ($) =>
      seq(
        kw('Table'),
        field('name', $.table_name),
        optional(seq(kw('as'), field('alias', alias($._name, $.table_alias)))),
        optional(field('settings', $.settings_list)),
        '{',
        repeat($._newline),
        optional(newlineSep1($._table_item, $)),
        '}',
      ),

    _table_item: ($) =>
      choice(
        $.column_definition,
        $.indexes_block,
        $.checks_block,
        $.note_definition,
        $.partial_injection,
        $.records_block,
      ),

    // A table (or enum, or record target) name, optionally schema-qualified.
    table_name: ($) =>
      seq(
        optional(seq(field('schema', alias($._name, $.schema_name)), '.')),
        field('name', $._name),
      ),

    column_definition: ($) =>
      seq(
        field('name', alias($._name, $.column_name)),
        field('type', $.column_type),
        repeat(field('flag', $.legacy_flag)),
        optional(field('settings', $.settings_list)),
      ),

    column_type: ($) =>
      seq(
        optional(seq(field('schema', alias($._name, $.schema_name)), '.')),
        field('name', alias($._name, $.type_name)),
        optional(field('arguments', $.type_arguments)),
      ),

    package_clause: ($) =>
      seq(kw('package'), field('name', $.identifier)),

    // import ( [alias] path/segments ... ) (§V2)
    import_block: ($) =>
      seq(
        kw('import'),
        '(',
        repeat($._newline),
        optional(newlineSep1($.import_spec, $)),
        ')',
      ),

    import_spec: ($) =>
      choice(
        field('path', $.import_path),
        seq(
          field('alias', alias($.identifier, $.import_alias)),
          field('path', $.import_path),
        ),
      ),

    import_path: ($) =>
      seq(
        $.identifier,
        repeat(seq(token.immediate('/'), alias($._ident_immediate, $.identifier))),
      ),

    // Pipeline name { use ref ... } (§V3)
    pipeline_definition: ($) =>
      seq(
        kw('Pipeline'),
        field('name', alias($.identifier, $.pipeline_name)),
        '{',
        repeat($._newline),
        optional(newlineSep1($.plug, $)),
        '}',
      ),

    plug: ($) => seq(kw('use'), field('ref', $.go_ref)),

    go_ref: ($) => seq($.identifier, optional(seq('.', $.identifier))),

    // Scope path [settings] { routes | resources | Scope } (§V4)
    scope_definition: ($) =>
      seq(
        kw('Scope'),
        field('path', $.route_path),
        optional(field('settings', $.settings_list)),
        '{',
        repeat($._newline),
        optional(newlineSep1($._scope_item, $)),
        '}',
      ),

    _scope_item: ($) =>
      choice($.route, $.resources_declaration, $.scope_definition),

    route: ($) =>
      seq(
        field('verb', $.verb),
        field('path', $.route_path),
        field('handler', $.go_ref),
        optional(field('settings', $.settings_list)),
      ),

    verb: () =>
      choice(
        kw('get', 2), kw('post', 2), kw('put', 2), kw('patch', 2),
        kw('delete', 2), kw('options', 2), kw('head', 2), kw('any', 2),
      ),

    // resources names a table, optionally qualified by a package
    // (volt §V5.1): `resources db.posts`.
    resources_declaration: ($) =>
      seq(
        kw('resources'),
        optional(seq(field('package', alias($.identifier, $.package_name)), '.')),
        field('table', alias($.identifier, $.table_name)),
        optional(field('settings', $.settings_list)),
      ),

    // ==================== Groups, Preds, Selects (§V9-§V11) ====================

    // Group name { members } | Group name = a + b - c (§V9)
    route_path: ($) =>
      seq(
        '/',
        optional(
          seq(
            $._path_segment,
            repeat(seq(token.immediate('/'), $._path_segment)),
          ),
        ),
      ),

    _path_segment: ($) =>
      choice(
        alias($._ident_immediate, $.path_segment),
        $.path_parameter,
      ),

    path_parameter: ($) =>
      seq(
        token.immediate(':'),
        field('name', alias($._ident_immediate, $.parameter_name)),
        optional(
          choice(
            seq(
              token.immediate('('),
              field('type', alias($._ident_immediate, $.type_name)),
              token.immediate(')'),
            ),
            field('wildcard', alias(token.immediate('...'), $.wildcard_marker)),
          ),
        ),
      ),

    // An identifier glued to the previous token (route and import paths).
    _ident_immediate: () =>
      token.immediate(/[0-9]*[\p{L}\p{M}_][\p{L}\p{M}\p{Nd}_]*/),

    // ==================== Settings (§4.2) ====================

    settings_list: ($) =>
      seq('[', $.setting, repeat(seq(',', $.setting)), ']'),

    setting: ($) =>
      seq(
        field('name', $.setting_name),
        optional(seq(':', field('value', $._setting_value))),
      ),

    // Setting names may be multi-word: `primary key`, `not null` (§4.2).
    setting_name: ($) => prec.right(repeat1($._name)),

    _setting_value: ($) =>
      choice(
        $.string,
        $.signed_number,
        $.number,
        $.boolean,
        $.null,
        $.color,
        $.expression,
        $.enum_constant,
        $.inline_ref,
        $.ident_group,
        alias($.setting_name, $.setting_value_words),
      ),

    // Parenthesized identifier list: only: (index, show) (volt §V5.3);
    // order lists allow a one-word modifier: order: (year desc, id) (§V11.5).
    ident_group: ($) =>
      seq('(', $._ident_item, repeat(seq(',', $._ident_item)), ')'),

    _ident_item: ($) => seq($._name, optional(alias($._name, $.ident_modifier))),

    // value of a column's `ref:` setting: `> schema.table.column` (§6.7)
    _name: ($) => choice($.identifier, $.quoted_identifier),

    // Letters are Unicode L and M categories; identifiers may begin with
    // digits (`2fa_codes`) but an all-digit token is a number (§3.4).
    identifier: () => /[0-9]*[\p{L}\p{M}_][\p{L}\p{M}\p{Nd}_]*/,

    _newline: () => /\n/,
  },
});
